syntax = "proto2";

package kotlinx.serialization.protobuf.generator.scheme;

// serial name 'kotlinx.serialization.protobuf.generator.GenerationTest.FieldNumberClass'
message FieldNumberClass {
  required int32 a = 1;
  required int32 b = 5;
  required int32 c = 3;
}
