package kotlinx.serialization.protobuf.generator

import kotlinx.serialization.*
import kotlinx.serialization.protobuf.ProtoIntegerType
import kotlinx.serialization.protobuf.ProtoNumber
import kotlinx.serialization.protobuf.ProtoType
import java.io.File
import java.nio.charset.StandardCharsets
import kotlin.reflect.KClass
import kotlin.reflect.typeOf
import kotlin.test.Test
import kotlin.test.assertEquals
import kotlin.test.assertFailsWith

private const val TARGET_PACKAGE = "kotlinx.serialization.protobuf.generator.scheme"
private const val SCHEMES_DIRECTORY_PATH = "formats/protobuf-generator/jvmTest/resources"

class GenerationTest {

    @Serializable
    class ScalarHolder(
        val int: Int,
        @ProtoType(ProtoIntegerType.SIGNED)
        val intSigned: Int,
        @ProtoType(ProtoIntegerType.FIXED)
        val intFixed: Int,
        @ProtoType(ProtoIntegerType.DEFAULT)
        val intDefault: Int,

        val long: Long,
        @ProtoType(ProtoIntegerType.SIGNED)
        val longSigned: Long,
        @ProtoType(ProtoIntegerType.FIXED)
        val longFixed: Long,
        @ProtoType(ProtoIntegerType.DEFAULT)
        val longDefault: Int,

        val flag: Boolean,
        val byteArray: ByteArray,
        val boxedByteArray: Array<Byte?>,
        val text: String,
        val float: Float,
        val double: Double
    )

    @Serializable
    class FieldNumberClass(
        val a: Int,
        @ProtoNumber(5)
        val b: Int,
        @ProtoNumber(3)
        val c: Int
    )

    @Serializable
    @SerialName("my serial name")
    class SerialNameClass(
        val original: Int,
        @SerialName("enum field")
        val b: SerialNameEnum

    )

    @Serializable
    enum class SerialNameEnum {
        FIRST,

        @SerialName("overridden-name-of-enum!")
        SECOND
    }

    @Serializable
    data class OptionsClass(val i: Int)

    @Serializable
    class ListClass(
        val intList: List<Int>,
        val intArray: IntArray,
        val boxedIntArray: Array<Int?>,
        val messageList: List<OptionsClass>,
        val enumList: List<SerialNameEnum>
    )

    @Serializable
    class MapClass(
        val scalarMap: Map<Int, Float>,
        val bytesMap: Map<Int, List<Byte>>,
        val messageMap: Map<String, OptionsClass>,
        val enumMap: Map<Boolean, SerialNameEnum>
    )

    @Serializable
    data class OptionalClass(
        val requiredInt: Int,
        val optionalInt: Int = 5,
        val nullableInt: Int?,
        val nullableOptionalInt: Int? = 10
    )

    @Serializable
    data class ContextualHolder(
        @Contextual val value: Int
    )

    @Serializable
    abstract class AbstractClass(val int: Int)

    @Serializable
    data class AbstractHolder(@Polymorphic val abs: AbstractClass)

    @Serializable
    sealed class SealedClass {
        @Serializable
        data class Impl1(val int: Int) : SealedClass()

        @Serializable
        data class Impl2(val long: Long) : SealedClass()
    }

    @Serializable
    data class SealedHolder(val sealed: SealedClass)

    @Test
    fun testIllegalPackageNames() {
        val descriptors = listOf(OptionsClass.serializer().descriptor)
        assertFailsWith(IllegalArgumentException::class) { generateProto(descriptors, "", emptyMap()) }
        assertFailsWith(IllegalArgumentException::class) { generateProto(descriptors, ".", emptyMap()) }
        assertFailsWith(IllegalArgumentException::class) { generateProto(descriptors, ".first.dot", emptyMap()) }
        assertFailsWith(IllegalArgumentException::class) { generateProto(descriptors, "ended.with.dot.", emptyMap()) }
        assertFailsWith(IllegalArgumentException::class) { generateProto(descriptors, "first._underscore", emptyMap()) }
        assertFailsWith(IllegalArgumentException::class) { generateProto(descriptors, "first.1digit", emptyMap()) }
        assertFailsWith(IllegalArgumentException::class) { generateProto(descriptors, "illegal.sym+bol", emptyMap()) }
    }

    @Test
    fun testValidPackageNames() {
        val descriptors = listOf(OptionsClass.serializer().descriptor)
        generateProto(descriptors, "singleIdent", emptyMap())
        generateProto(descriptors, "double.ident", emptyMap())
        generateProto(descriptors, "with.digits0123", emptyMap())
        generateProto(descriptors, "with.underscore_", emptyMap())
    }

    @Test
    fun test() {
        assertProtoForType(ScalarHolder::class)
        assertProtoForType(FieldNumberClass::class)
        assertProtoForType(SerialNameClass::class)
        assertProtoForType(OptionsClass::class, mapOf("java_package" to "api.proto", "java_outer_classname" to "Outer"))
        assertProtoForType(ListClass::class)
        assertProtoForType(MapClass::class)
        assertProtoForType(OptionalClass::class)
        assertProtoForType(ContextualHolder::class)
        assertProtoForType(AbstractHolder::class)
        assertProtoForType(SealedHolder::class)
    }

    private inline fun <reified T : Any> assertProtoForType(
        clazz: KClass<T>,
        options: Map<String, String> = emptyMap()
    ) {
        val scheme = clazz.java.getResourceAsStream("/${clazz.simpleName}.proto").readBytes().toString(Charsets.UTF_8)
        assertEquals(scheme, generateProto(listOf(serializer(typeOf<T>()).descriptor), TARGET_PACKAGE, options))
    }

}

/*
// Regenerate all proto file for tests.
private fun main() {
    regenerateAllProtoFiles()
}
*/

private fun regenerateAllProtoFiles() {
    generateProtoFile(GenerationTest.ScalarHolder::class)
    generateProtoFile(GenerationTest.FieldNumberClass::class)
    generateProtoFile(GenerationTest.SerialNameClass::class)
    generateProtoFile(GenerationTest.OptionsClass::class, mapOf("java_package" to "api.proto", "java_outer_classname" to "Outer"))
    generateProtoFile(GenerationTest.ListClass::class)
    generateProtoFile(GenerationTest.MapClass::class)
    generateProtoFile(GenerationTest.OptionalClass::class)
    generateProtoFile(GenerationTest.ContextualHolder::class)
    generateProtoFile(GenerationTest.AbstractHolder::class)
    generateProtoFile(GenerationTest.SealedHolder::class)
}

private inline fun <reified T : Any> generateProtoFile(
    clazz: KClass<T>,
    options: Map<String, String> = emptyMap()
) {
    val filePath = "$SCHEMES_DIRECTORY_PATH/${clazz.simpleName}.proto"
    val file = File(filePath)
    val scheme = generateProto(listOf(serializer(typeOf<T>()).descriptor), TARGET_PACKAGE, options)
    file.writeText(scheme, StandardCharsets.UTF_8)
}
